src/test/deca/syntax/invalid/lexer/chaine_lex-lex.corr
STRING: [@0,224:239='"chaine normale"',<49>,13:0]
STRING: [@1,241:252='"aabb//aabb"',<49>,14:0]
STRING: [@2,254:265='"/*egegeg*/"',<49>,15:0]
STRING: [@3,267:278='"aabb//aabb"',<49>,16:0]
STRING: [@4,280:290='"print asm"',<49>,17:0]
STRING: [@5,292:298='"rgrdg"',<49>,18:0]
STRING: [@6,300:302='"'"',<49>,19:0]
STRING: [@7,304:307='"\""',<49>,20:0]
STRING: [@8,309:312='"\\"',<49>,21:0]
STRING: [@9,314:319='"\\\""',<49>,22:0]
MULTI_LINE_STRING: [@10,321:327='"\\\n\""',<50>,23:0]
MULTI_LINE_STRING: [@11,329:341='"gggggg\ngggg"',<50>,25:0]
